OO-7417: Adding Projects tab, show user's projects with details and allow removal